--- a/index.html
+++ b/index.html
@@ -103,5 +103,157 @@
     </nav>
 
     <!-- Banner -->
+    <section>
+      <div class="pt-6 flex justify-center">
+        <div class="carousel w-full lg:w-[1170px] lg:h-[500px]">
+          <!-- Sl-1 -->
+          <div
+            id="slide1"
+            class="carousel-item relative w-full bg-no-repeat bg-cover bg-[url('images/banner1.png')]"
+          >
+            <div
+              class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
+            >
+              <div
+                class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+              >
+                <h2 class="text-5xl font-extrabold text-white">
+                  Exotic tastes at your doorstep
+                </h2>
+
+                <p
+                  class="pt-4 mx-auto text-center text-base leading-relaxed text-white"
+                >
+                  We supply highly quality organic products
+                </p>
+                <div class="flex justify-center align-middle items-center pt-4">
+                  <button
+                    class="btn btn-red w-1/3 rounded-md bg-[#F85559] border-none text-white font-bold"
+                  >
+                    Shop Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a href="#slide4" class="btn glass">❮</a>
+              <a href="#slide2" class="btn glass">❯</a>
+            </div>
+          </div>
+          <!-- Sl-2 -->
+          <div
+            id="slide2"
+            class="carousel-item relative w-full bg-no-repeat bg-cover bg-[url('images/banner2.png')]"
+          >
+            <div
+              class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
+            >
+              <div
+                class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+              >
+                <h2 class="text-5xl font-extrabold text-white">
+                  Exotic tastes at your doorstep
+                </h2>
+
+                <p
+                  class="pt-4 mx-auto text-center text-base leading-relaxed text-white"
+                >
+                  We supply highly quality organic products
+                </p>
+                <div class="flex justify-center align-middle items-center pt-4">
+                  <button
+                    class="btn btn-red w-1/3 rounded-md bg-[#F85559] border-none text-white font-bold"
+                  >
+                    Shop Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a href="#slide1" class="btn glass">❮</a>
+              <a href="#slide3" class="btn glass">❯</a>
+            </div>
+          </div>
+          <!-- Sl-3 -->
+          <div
+            id="slide3"
+            class="carousel-item relative w-full bg-no-repeat bg-cover bg-[url('images/banner3.png')]"
+          >
+            <div
+              class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
+            >
+              <div
+                class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+              >
+                <h2 class="text-5xl font-extrabold text-white">
+                  Exotic tastes at your doorstep
+                </h2>
+
+                <p
+                  class="pt-4 mx-auto text-center text-base leading-relaxed text-white"
+                >
+                  We supply highly quality organic products
+                </p>
+                <div class="flex justify-center align-middle items-center pt-4">
+                  <button
+                    class="btn btn-red w-1/3 rounded-md bg-[#F85559] border-none text-white font-bold"
+                  >
+                    Shop Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a href="#slide2" class="btn glass">❮</a>
+              <a href="#slide4" class="btn glass">❯</a>
+            </div>
+          </div>
+          <!-- Sl-4 -->
+          <div
+            id="slide4"
+            class="carousel-item relative w-full bg-no-repeat bg-cover bg-[url('images/banner4.png')]"
+          >
+            <div
+              class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
+            >
+              <div
+                class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+              >
+                <h2 class="text-5xl font-extrabold text-white">
+                  Exotic tastes at your doorstep
+                </h2>
+
+                <p
+                  class="pt-4 mx-auto text-center text-base leading-relaxed text-white"
+                >
+                  We supply highly quality organic products
+                </p>
+                <div class="flex justify-center align-middle items-center pt-4">
+                  <button
+                    class="btn btn-red w-1/3 rounded-md bg-[#F85559] border-none text-white font-bold"
+                  >
+                    Shop Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a href="#slide3" class="btn glass">❮</a>
+              <a href="#slide1" class="btn glass">❯</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Deal of the day -->
   </body>
 </html>
