--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Banner -->
     <section>
       <div class="pt-6 flex justify-center">
-        <div class="carousel w-full lg:w-[1170px] lg:h-[500px]">
+        <div class="carousel h-[600px]">
           <!-- Sl-1 -->
           <div
             id="slide1"
@@ -117,7 +117,7 @@
               <div
                 class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
               >
-                <h2 class="text-5xl font-extrabold text-white">
+                <h2 class="text-5xl p-10 font-extrabold text-white">
                   Exotic tastes at your doorstep
                 </h2>
 
@@ -153,7 +153,7 @@
               <div
                 class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
               >
-                <h2 class="text-5xl font-extrabold text-white">
+                <h2 class="text-5xl p-10 font-extrabold text-white">
                   Exotic tastes at your doorstep
                 </h2>
 
@@ -189,7 +189,7 @@
               <div
                 class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
               >
-                <h2 class="text-5xl font-extrabold text-white">
+                <h2 class="text-5xl p-10 font-extrabold text-white">
                   Exotic tastes at your doorstep
                 </h2>
 
@@ -225,7 +225,7 @@
               <div
                 class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
               >
-                <h2 class="text-5xl font-extrabold text-white">
+                <h2 class="text-5xl p-10 font-extrabold text-white">
                   Exotic tastes at your doorstep
                 </h2>
 
@@ -252,8 +252,405 @@
           </div>
         </div>
       </div>
+      <div>
+        <div
+          class="ml-auto mr-auto -mt-16 items-center flex text-center justify-center gap-10 drop-shadow-lg bg-white p-5 w-4/5 rounded-xl"
+        >
+          <div>
+            <img src="images/fruit1.png" class="" />
+            <i class="text-3xl"></i>
+            <p>Grape</p>
+          </div>
+          <div>
+            <img src="images/fruit2.png" class="" />
+            <i class="text-3xl"></i>
+            <p>Orange</p>
+          </div>
+          <div>
+            <img src="images/fruit3.png" class="" />
+            <i class="text-3xl"></i>
+            <p>Mango</p>
+          </div>
+          <div>
+            <img src="images/fruit4.png" class="" />
+            <i class="text-3xl"></i>
+            <p>Strawberry</p>
+          </div>
+          <div>
+            <img src="images/fruit5.png" class="" />
+            <i class="text-3xl"></i>
+            <p>Pomegranate</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Deal of the day -->
+    <section>
+      <div
+        class="grid col-span-1 text-center lg:text-left lg:flex lg:justify-between lg:py-32 py-10"
+      >
+        <div>
+          <div>
+            <h2 class="text-5xl font-extrabold">Deal of the day</h2>
+          </div>
+          <div class="pt-7">
+            <p>
+              Contrary to popular belief, is not simply random text. It has
+              roots in a piece of classical <br />
+              Latin literature from 45 BC, making it over 2000 years old.
+            </p>
+          </div>
+        </div>
+        <div class="flex justify-center">
+          <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value: 15"></span>
+              </span>
+              days
+            </div>
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value: 10"></span>
+              </span>
+              hours
+            </div>
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value: 24"></span>
+              </span>
+              min
+            </div>
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value: 52"></span>
+              </span>
+              sec
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Fruit Cards -->
+      <div
+        class="lg:flex justify-center grid col-span-1 text-center gap-8 w-full"
+      >
+        <div class="w-full max-w-xs overflow-hidden border rounded-lg">
+          <img
+            class="object-center w-auto mx-auto h-56"
+            src="images/fruit6.png"
+          />
+
+          <div class="py-5 text-center">
+            <a
+              href="#"
+              class="block text-xl font-bold text-gray-800"
+              tabindex="0"
+              role="link"
+              >12.90$ - 18.85$</a
+            >
+            <span class="pt-10 text-sm text-gray-700">Apples</span>
+            <div class="flex justify-center p-6">
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-1" class="rating-hidden" />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-1"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+              </div>
+            </div>
+            <div class="p-2">
+              <a class="text-[#F85559] font-bold">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-full max-w-xs overflow-hidden border rounded-lg">
+          <img
+            class="object-center w-auto mx-auto h-56"
+            src="images/fruit7.png"
+          />
+
+          <div class="py-5 text-center">
+            <a
+              href="#"
+              class="block text-xl font-bold text-gray-800"
+              tabindex="0"
+              role="link"
+              >12.90$ - 18.85$</a
+            >
+            <span class="pt-10 text-sm text-gray-700">Orange</span>
+            <div class="flex justify-center p-6">
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+              </div>
+            </div>
+            <div class="p-2">
+              <a class="text-[#F85559] font-bold">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-full max-w-xs overflow-hidden border rounded-lg">
+          <img
+            class="object-center w-auto mx-auto h-56"
+            src="images/fruit8.png"
+          />
+
+          <div class="py-5 text-center">
+            <a
+              href="#"
+              class="block text-xl font-bold text-gray-800"
+              tabindex="0"
+              role="link"
+              >12.90$ - 18.85$</a
+            >
+            <span class="pt-10 text-sm text-gray-700">Red Dragon</span>
+            <div class="flex justify-center p-6">
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+              </div>
+            </div>
+            <div class="p-2">
+              <a class="text-[#F85559] font-bold">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-full max-w-xs overflow-hidden border rounded-lg">
+          <img
+            class="object-center w-auto mx-auto h-56"
+            src="images/fruit9.png"
+          />
+
+          <div class="py-5 text-center">
+            <a
+              href="#"
+              class="block text-xl font-bold text-gray-800"
+              tabindex="0"
+              role="link"
+              >12.90$ - 18.85$</a
+            >
+            <span class="pt-10 text-sm text-gray-700">Banana</span>
+            <div class="flex justify-center p-6">
+              <div class="rating rating-lg rating-half">
+                <input type="radio" name="rating-10" class="rating-hidden" />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-1"
+                />
+                <input
+                  type="radio"
+                  name="rating-10"
+                  class="bg-[#F85559] mask mask-star-2 mask-half-2"
+                />
+              </div>
+            </div>
+            <div class="p-2">
+              <a class="text-[#F85559] font-bold">Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex justify-center text-center items-center p-8">
+        <button
+          class="btn btn-red lg:w-1/5 w-1/3 rounded-md bg-[#F85559] border-none text-white font-bold"
+        >
+          Shop All
+        </button>
+      </div>
+    </section>
   </body>
 </html>
