--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fruit Brust</title>
+    <link
+      rel="shortcut icon"
+      href="icons/icons8-fruits-32.png"
+      type="image/x-icon"
+    />
     <!-- Tailwind -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css"
@@ -28,7 +33,7 @@
   <body class="container mx-auto font-lato">
     <!-- Nav Bar -->
     <nav>
-      <div class="navbar bg-[#F85559] rounded-full lg:px-5">
+      <div class="navbar lg:bg-[#F85559] rounded-full lg:px-5">
         <div class="navbar-start hidden lg:flex">
           <ul class="menu menu-horizontal px-1 text-white">
             <li><a>Home</a></li>
@@ -67,16 +72,18 @@
           </div>
           <div class="flex justify-center items-center">
             <img class="h-10" src="images/logo.png" alt="" />
-            <a class="btn btn-ghost normal-case text-2xl text-white font-bold"
+            <a
+              class="btn btn-ghost normal-case text-2xl lg:text-white text-black font-bold"
               >Fruit Brust</a
             >
           </div>
         </div>
+
         <div class="navbar-end container relative left-0 z-50 flex w-2/4">
           <div class="relative flex items-center w-full h-full lg:w-64 group">
             <input
               type="text"
-              class="block w-full py-1.5 pl-10 pr-4 leading-normal rounded-2xl focus:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-500 ring-opacity-90 bg-gray-100 text-gray-400 aa-input"
+              class="block w-full py-1.5 pl-10 pr-4 rounded-2xl bg-gray-100 text-gray-400"
               placeholder="Search here"
             />
             <div
@@ -105,7 +112,7 @@
     <!-- Banner -->
     <section>
       <div class="pt-6 flex justify-center">
-        <div class="carousel h-[600px]">
+        <div class="carousel mx-2 lg:mx-0 lg:h-[600px] rounded-2xl">
           <!-- Sl-1 -->
           <div
             id="slide1"
@@ -268,7 +275,9 @@
           </div>
         </div>
       </div>
-      <div>
+
+      <!-- Floating Bar -->
+      <div class="hidden lg:block">
         <div
           class="ml-auto mr-auto -mt-16 items-center flex text-center justify-center gap-10 drop-shadow-lg bg-white p-5 w-4/5 rounded-xl"
         >
@@ -347,11 +356,12 @@
           </div>
         </div>
       </div>
+
       <!-- Fruit Cards -->
       <div
         class="lg:flex justify-center grid col-span-1 text-center gap-8 w-full"
       >
-        <div class="w-full max-w-xs overflow-hidden border rounded-lg">
+        <div class="w-full overflow-hidden border rounded-lg">
           <img
             class="object-center w-auto mx-auto h-56"
             src="images/fruit6.png"
@@ -957,5 +967,239 @@
         </div>
       </div>
     </section>
+
+    <!-- Why Choose Us -->
+    <section>
+      <div class="px-6 py-10">
+        <div>
+          <div class="flex items-center justify-center">
+            <h2 class="text-5xl font-extrabold">Why Choose Us</h2>
+          </div>
+          <div class="py-7 flex items-center justify-center text-center">
+            <p>
+              Contrary to popular belief, is not simply random text. It has
+              roots in a piece of classical <br />
+              Latin literature from 45 BC, making it over 2000 years old.
+            </p>
+          </div>
+        </div>
+
+        <div class="grid grid-cols-1 gap-8 md:grid-cols-3 xl:grid-cols-3">
+          <!-- Left -->
+          <div>
+            <div
+              class="lg:flex lg:justify-center lg:text-left text-center items-center py-5"
+            >
+              <div class="pr-5 flex justify-center">
+                <img
+                  class="object-center w-[100px] rounded-full bg-slate-300"
+                  src="icons/icons8-team-50.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h1 class="text-xl font-semibold text-gray-800">
+                  Dedicated Team
+                </h1>
+                <div class="flex lg:justify-start justify-center">
+                  <hr class="my-4 border-gray-700 w-1/5" />
+                </div>
+                <p class="text-gray-500">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="lg:flex lg:justify-center lg:text-left text-center items-center py-5"
+            >
+              <div class="pr-5 flex justify-center">
+                <img
+                  class="object-center w-[100px] rounded-full bg-slate-300"
+                  src="icons/icons8-hello-fresh-50.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h1 class="text-xl font-semibold text-gray-800">
+                  Fresh is Best
+                </h1>
+                <div class="flex lg:justify-start justify-center">
+                  <hr class="my-4 border-gray-700 w-1/5" />
+                </div>
+                <p class="text-gray-500">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="lg:flex lg:justify-center lg:text-left text-center items-center py-5"
+            >
+              <div class="pr-5 flex justify-center">
+                <img
+                  class="object-center w-[100px] rounded-full bg-slate-200"
+                  src="icons/icons8-gift-50.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h1 class="text-xl font-semibold text-gray-800">
+                  Gift Certificates
+                </h1>
+                <div class="flex lg:justify-start justify-center">
+                  <hr class="my-4 border-gray-700 w-1/5" />
+                </div>
+                <p class="text-gray-500">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Center Image -->
+          <div class="order-first lg:order-none">
+            <img
+              class="object-cover object-center w-full rounded-lg"
+              src="images/whychoose1.png"
+              alt=""
+            />
+          </div>
+
+          <!-- Right -->
+          <div>
+            <div
+              class="lg:flex lg:justify-center lg:text-right text-center items-center py-5 lg:flex-row-reverse"
+            >
+              <div class="lg:pl-5 flex justify-center">
+                <img
+                  class="object-center w-[100px] rounded-full bg-slate-300"
+                  src="icons/icons8-fruit-bag-50.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h1 class="text-xl font-semibold text-gray-800">
+                  Integrated Supplier
+                </h1>
+                <div class="flex lg:justify-end justify-center">
+                  <hr class="my-4 border-gray-700 w-1/5" />
+                </div>
+                <p class="text-gray-500">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="lg:flex lg:justify-center lg:text-right text-center items-center py-5 lg:flex-row-reverse"
+            >
+              <div class="lg:pl-5 flex justify-center">
+                <img
+                  class="object-center w-[100px] rounded-full bg-slate-300"
+                  src="icons/icons8-growing-money-50.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h1 class="text-xl font-semibold text-gray-800">
+                  Sustainable Practice
+                </h1>
+                <div class="flex lg:justify-end justify-center">
+                  <hr class="my-4 border-gray-700 w-1/5" />
+                </div>
+                <p class="text-gray-500">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="lg:flex lg:justify-center lg:text-right text-center items-center py-5 lg:flex-row-reverse"
+            >
+              <div class="lg:pl-5 flex justify-center">
+                <img
+                  class="object-center w-[100px] rounded-full bg-slate-300"
+                  src="icons/icons8-price-50.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h1 class="text-xl font-semibold text-gray-800">
+                  The Benefits Only
+                </h1>
+                <div class="flex lg:justify-end justify-center">
+                  <hr class="my-4 border-gray-700 w-1/5" />
+                </div>
+                <p class="text-gray-500">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-[#121212]">
+      <div class="container px-6 py-28 mx-auto">
+        <div class="flex flex-col items-center text-center">
+          <div class="flex justify-center">
+            <img class="h-10" src="images/logo.png" alt="" />
+            <a class="btn btn-ghost normal-case text-4xl text-white font-bold"
+              >Fruit Brust</a
+            >
+          </div>
+
+          <!-- Text Links -->
+          <div class="flex flex-wrap justify-center mt-6 lg:-mx-4 gap-4">
+            <a href="#" class="mx-4 text-sm text-white"> Home </a>
+
+            <a href="#" class="mx-4 text-sm text-white"> About </a>
+
+            <a href="#" class="mx-4 text-sm text-white"> Shop </a>
+
+            <a href="#" class="mx-4 text-sm text-white"> All Fruits </a>
+
+            <a href="#" class="mx-4 text-sm text-white"> Support </a>
+
+            <a href="#" class="mx-4 text-sm text-white"> My Account </a>
+          </div>
+
+          <!-- Social Icons -->
+          <div class="flex flex-wrap justify-center mt-6 -mx-4">
+            <a href="#" class="mx-4 text-sm"
+              ><img src="icons/icons8-facebook-32.png" alt=""
+            /></a>
+            <a href="#" class="mx-4 text-sm"
+              ><img src="icons/icons8-whatsapp-32.png" alt=""
+            /></a>
+            <a href="#" class="mx-4 text-sm"
+              ><img src="icons/icons8-instagram-32.png" alt=""
+            /></a>
+            <a href="#" class="mx-4 text-sm"
+              ><img src="icons/icons8-linkedin-32.png" alt=""
+            /></a>
+            <a href="#" class="mx-4 text-sm"
+              ><img src="icons/icons8-twitter-32.png" alt=""
+            /></a>
+            <a href="#" class="mx-4 text-sm"
+              ><img src="icons/icons8-youtube-32.png" alt=""
+            /></a>
+          </div>
+
+          <div class="flex flex-wrap justify-center mt-24 -mx-4">
+            <p class="mx-4 text-sm text-gray-400">© Arjun Kumar Bose Arnob</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
