--- a/index.html
+++ b/index.html
@@ -130,12 +130,19 @@
             </label>
             <ul
               tabindex="0"
-              class="menu dropdown-content mt-3 z-[1] p-2 -m-10 -w-max shadow bg-base-100 rounded-box"
+              class="menu dropdown-content mt-3 z-[1] p-8 -m-44 -w-max shadow bg-base-100 rounded-box"
             >
               <li><a>Home</a></li>
               <li><a>About Us</a></li>
               <li><a>Shop</a></li>
               <li><a>All Fruits</a></li>
+              <li>
+                <input
+                  type="text"
+                  placeholder="Search here"
+                  class="bg-white rounded-3xl px-3 py-2 pr-5 w-full h-full"
+                />
+              </li>
             </ul>
           </div>
         </div>
