--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </label>
             <ul
               tabindex="0"
-              class="menu dropdown-content mt-3 z-[1] p-2 -m-10 -w-max shadow bg-base-100 rounded-box"
+              class="menu dropdown-content mt-3 z-[1] p-4 m-10 w-40 shadow bg-base-100 rounded-box"
             >
               <li><a>Home</a></li>
               <li><a>About Us</a></li>
@@ -163,7 +163,7 @@
                 class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
               >
                 <div
-                  class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+                  class="mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
                 >
                   <h2 class="text-5xl p-10 font-extrabold text-white">
                     Exotic tastes at your doorstep
@@ -203,7 +203,7 @@
                 class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
               >
                 <div
-                  class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+                  class="mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
                 >
                   <h2 class="text-5xl p-10 font-extrabold text-white">
                     Exotic tastes at your doorstep
@@ -243,7 +243,7 @@
                 class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
               >
                 <div
-                  class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+                  class="mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
                 >
                   <h2 class="text-5xl p-10 font-extrabold text-white">
                     Exotic tastes at your doorstep
@@ -283,7 +283,7 @@
                 class="md:px-12 lg:px-24 max-w-7xl relative items-center w-full px-5 py-12 mx-auto"
               >
                 <div
-                  class="lg:mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
+                  class="mx-auto flex flex-col w-full max-w-lg mb-2 text-center"
                 >
                   <h2 class="text-5xl p-10 font-extrabold text-white">
                     Exotic tastes at your doorstep
